@@ -232,6 +232,42 @@ name|Test
 import|;
 end_import
 
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|never
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|spy
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
+name|verify
+import|;
+end_import
+
 begin_class
 annotation|@
 name|InterfaceAudience
@@ -2271,6 +2307,40 @@ name|ian
 argument_list|,
 name|acl
 argument_list|)
+expr_stmt|;
+name|acl
+operator|=
+operator|new
+name|AccessControlList
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+name|UserGroupInformation
+name|spyUser
+init|=
+name|spy
+argument_list|(
+name|drwho
+argument_list|)
+decl_stmt|;
+name|acl
+operator|.
+name|isUserAllowed
+argument_list|(
+name|spyUser
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|spyUser
+argument_list|,
+name|never
+argument_list|()
+argument_list|)
+operator|.
+name|getGroupNames
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|assertUserAllowed (UserGroupInformation ugi, AccessControlList acl)
